--- a/css/style.css
+++ b/css/style.css
@@ -270,15 +270,15 @@ body {
   border: 1px solid #f2c200;
   opacity: 0;
 }
-.banner__btn:hover {
-  color: #f2c200;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
 .banner__btn.element-show {
   opacity: 1;
   -webkit-transition: all 7s;
   transition: all 7s;
+}
+.banner__btn:hover {
+  color: #f2c200;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .scroll-down {
@@ -493,6 +493,13 @@ body {
   display: inline-block;
   margin-bottom: 25px;
   position: relative;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.about__slider-item:hover .about__slider-link {
+  color: #f2c200;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 .about__slider-link {
   display: block;
@@ -501,11 +508,6 @@ body {
   text-align: center;
   text-transform: uppercase;
   color: #595666;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.about__slider-link:hover {
-  color: #f2c200;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
@@ -596,8 +598,8 @@ body {
   overflow: hidden;
 }
 .portfolio__info {
-  width: 40%;
-  padding: 80px 30px;
+  width: 42%;
+  padding: 60px 20px;
   background-color: #f2c200;
 }
 .portfolio__text {
@@ -606,7 +608,17 @@ body {
   text-align: justify;
 }
 .portfolio__album {
-  width: 60%;
+  width: 58%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.portfolio__album.element-show {
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+  -webkit-transition: all 2s;
+  transition: all 2s;
+}
+.portfolio__album-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -619,14 +631,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-.portfolio__album-part.element-show {
-  -webkit-transform: translateY(0%);
-          transform: translateY(0%);
-  -webkit-transition: all 2s;
-  transition: all 2s;
 }
 .portfolio__album-item {
   margin: 0 0 20px 20px;
@@ -683,6 +687,19 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+.portfolio__album-btn {
+  margin: 0 auto;
+  color: #2b2d5c;
+  background-color: #ffcc00;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.portfolio__album-btn:hover {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .popup__link {
@@ -753,8 +770,8 @@ body {
   opacity: 1;
   -webkit-transform: scale(1);
           transform: scale(1);
-  -webkit-transition: all 3s;
-  transition: all 3s;
+  -webkit-transition: all 2s;
+  transition: all 2s;
 }
 @media (max-width: 767px) {
   .blog__post {
