--- a/css/style.css
+++ b/css/style.css
@@ -1053,7 +1053,6 @@ body {
     display: block;
     margin: 15px 0;
     font-size: 20px;
-    color: #2b2d5c;
   }
 }
 
@@ -1124,7 +1123,7 @@ body {
     overflow: auto;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-    background-color: rgba(242, 194, 0, 0.9);
+    background-color: #f2c200;
     padding-top: 180px;
     z-index: 1;
   }
